--- a/Reciplease/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Reciplease/View/Storyboard/Base.lproj/Main.storyboard
@@ -146,7 +146,7 @@
             </objects>
             <point key="canvasLocation" x="1850.7246376811595" y="-147.32142857142856"/>
         </scene>
-        <!--Dishes View Controller-->
+        <!--Choose a recipe-->
         <scene sceneID="gFe-jk-VGu">
             <objects>
                 <viewController id="RGX-OD-Yyw" customClass="DishesViewController" customModule="Reciplease" customModuleProvider="target" sceneMemberID="viewController">
@@ -182,7 +182,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vfa-QH-C4O"/>
                     </view>
-                    <navigationItem key="navigationItem" id="drn-ri-UWY"/>
+                    <navigationItem key="navigationItem" title="Choose a recipe" id="drn-ri-UWY"/>
                     <connections>
                         <outlet property="dishesTableView" destination="iAt-rz-tab" id="tdl-L8-2lg"/>
                         <segue destination="D0N-l2-Ivx" kind="show" identifier="cellToRecipe" id="Ony-09-mka"/>
@@ -192,7 +192,7 @@
             </objects>
             <point key="canvasLocation" x="2713" y="-145"/>
         </scene>
-        <!--Recipe View Controller-->
+        <!--Recipe Detail-->
         <scene sceneID="bfj-UB-OcN">
             <objects>
                 <viewController id="D0N-l2-Ivx" customClass="RecipeViewController" customModule="Reciplease" customModuleProvider="target" sceneMemberID="viewController">
@@ -203,45 +203,125 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S2s-z0-ooy">
                                 <rect key="frame" x="0.0" y="390" width="414" height="423"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="recipeCell" textLabel="FKP-8y-iW4" style="IBUITableViewCellStyleDefault" id="Zov-VE-JER">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zov-VE-JER" id="DeR-ss-j8C">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="FKP-8y-iW4">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="D0N-l2-Ivx" id="SvM-6R-EwE"/>
+                                    <outlet property="delegate" destination="D0N-l2-Ivx" id="bN2-ph-wWj"/>
+                                </connections>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J0z-LH-k1E">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J0z-LH-k1E">
                                 <rect key="frame" x="0.0" y="88" width="414" height="301"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="301" id="91y-f3-mL8"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Happy Tuna" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wgL-WO-xJk">
-                                <rect key="frame" x="20" y="349" width="374" height="21"/>
+                                <rect key="frame" x="20" y="360" width="374" height="30"/>
+                                <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="0.40303938356164382" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="aP9-gg-Oxe"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SeM-fQ-d9f">
+                                <rect key="frame" x="314" y="98" width="40" height="40"/>
+                                <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="0.40263805650684931" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="EBp-Vd-1mz"/>
+                                    <constraint firstAttribute="width" constant="40" id="oSK-X5-z6L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" translatesAutoresizingMaskIntoConstraints="NO" id="8ta-oG-BFt">
+                                <rect key="frame" x="364" y="98" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="a9H-Fb-yWa"/>
+                                    <constraint firstAttribute="height" constant="40" id="mpa-n9-0kQ"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="time" translatesAutoresizingMaskIntoConstraints="NO" id="ogw-3z-G2Z">
+                                <rect key="frame" x="364" y="148" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="CTB-yY-DV3"/>
+                                    <constraint firstAttribute="width" constant="40" id="lX6-Qw-Cib"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="120mn" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TxP-Nz-mVa">
+                                <rect key="frame" x="294" y="148" width="60" height="40"/>
+                                <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="0.40263805650000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="I6g-gZ-S8B"/>
+                                    <constraint firstAttribute="width" constant="60" id="Vje-DF-f3J"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="848-QW-GdI" firstAttribute="trailing" secondItem="ogw-3z-G2Z" secondAttribute="trailing" constant="10" id="2Jd-UD-9JU"/>
+                            <constraint firstItem="848-QW-GdI" firstAttribute="trailing" secondItem="8ta-oG-BFt" secondAttribute="trailing" constant="10" id="3tX-Ey-mhf"/>
                             <constraint firstItem="wgL-WO-xJk" firstAttribute="leading" secondItem="848-QW-GdI" secondAttribute="leading" constant="20" id="64o-bL-LUq"/>
+                            <constraint firstItem="ogw-3z-G2Z" firstAttribute="top" secondItem="8ta-oG-BFt" secondAttribute="bottom" constant="10" id="9sI-NU-foN"/>
                             <constraint firstItem="S2s-z0-ooy" firstAttribute="bottom" secondItem="848-QW-GdI" secondAttribute="bottom" id="Bpq-oO-vD2"/>
+                            <constraint firstItem="8ta-oG-BFt" firstAttribute="top" secondItem="848-QW-GdI" secondAttribute="top" constant="10" id="Guk-fM-jUe"/>
+                            <constraint firstItem="8ta-oG-BFt" firstAttribute="leading" secondItem="SeM-fQ-d9f" secondAttribute="trailing" constant="10" id="H8R-A0-AVL"/>
                             <constraint firstItem="S2s-z0-ooy" firstAttribute="leading" secondItem="848-QW-GdI" secondAttribute="leading" id="J9a-df-2d7"/>
                             <constraint firstItem="J0z-LH-k1E" firstAttribute="centerX" secondItem="S2s-z0-ooy" secondAttribute="centerX" id="Llo-et-kqU"/>
                             <constraint firstItem="848-QW-GdI" firstAttribute="trailing" secondItem="S2s-z0-ooy" secondAttribute="trailing" id="Nvs-tX-2qb"/>
-                            <constraint firstItem="S2s-z0-ooy" firstAttribute="top" secondItem="wgL-WO-xJk" secondAttribute="bottom" constant="20" id="PeI-Qa-XIz"/>
+                            <constraint firstItem="S2s-z0-ooy" firstAttribute="top" secondItem="wgL-WO-xJk" secondAttribute="bottom" id="PeI-Qa-XIz"/>
                             <constraint firstItem="S2s-z0-ooy" firstAttribute="top" secondItem="J0z-LH-k1E" secondAttribute="bottom" constant="1" id="aXu-SD-HC1"/>
+                            <constraint firstItem="ogw-3z-G2Z" firstAttribute="leading" secondItem="TxP-Nz-mVa" secondAttribute="trailing" constant="10" id="awS-DM-yHO"/>
                             <constraint firstItem="J0z-LH-k1E" firstAttribute="top" secondItem="848-QW-GdI" secondAttribute="top" id="c0N-Ce-h1Y"/>
                             <constraint firstItem="J0z-LH-k1E" firstAttribute="trailing" secondItem="S2s-z0-ooy" secondAttribute="trailing" id="gtR-KJ-pqX"/>
+                            <constraint firstItem="TxP-Nz-mVa" firstAttribute="top" secondItem="SeM-fQ-d9f" secondAttribute="bottom" constant="10" id="rsj-dt-b4I"/>
+                            <constraint firstItem="SeM-fQ-d9f" firstAttribute="top" secondItem="848-QW-GdI" secondAttribute="top" constant="10" id="tcS-rx-dFz"/>
                             <constraint firstItem="848-QW-GdI" firstAttribute="trailing" secondItem="wgL-WO-xJk" secondAttribute="trailing" constant="20" id="vVN-ey-Yve"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="848-QW-GdI"/>
                     </view>
-                    <navigationItem key="navigationItem" id="GqZ-QQ-1gT"/>
+                    <navigationItem key="navigationItem" title="Recipe Detail" id="GqZ-QQ-1gT">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="9do-UQ-xd3">
+                            <color key="tintColor" red="0.33132684229999998" green="0.60186225179999997" blue="0.47449499369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="suit.heart.fill" catalog="system" id="DCu-BJ-fuB">
+                            <color key="tintColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="recipeImageView" destination="J0z-LH-k1E" id="4RZ-Vj-2Ab"/>
                         <outlet property="recipeIngredientsTableView" destination="S2s-z0-ooy" id="efZ-A6-PHg"/>
                         <outlet property="recipeLabel" destination="wgL-WO-xJk" id="iHu-YU-klA"/>
+                        <outlet property="slicesLabel" destination="SeM-fQ-d9f" id="n2v-A9-o6a"/>
+                        <outlet property="totalTimeLabel" destination="TxP-Nz-mVa" id="Yjj-fo-PPB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kzf-18-B4d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3733" y="-145"/>
+            <point key="canvasLocation" x="3731.884057971015" y="-145.3125"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Je1-LC-8S8">
@@ -379,4 +459,9 @@
             <point key="canvasLocation" x="-323" y="184"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="person" width="512" height="512"/>
+        <image name="suit.heart.fill" catalog="system" width="64" height="54"/>
+        <image name="time" width="512" height="512"/>
+    </resources>
 </document>
