--- a/Reciplease/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Reciplease/View/Storyboard/Base.lproj/Main.storyboard
@@ -307,8 +307,11 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="9do-UQ-xd3">
                             <color key="tintColor" red="0.33132684229999998" green="0.60186225179999997" blue="0.47449499369999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="suit.heart.fill" catalog="system" id="DCu-BJ-fuB">
-                            <color key="tintColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="heart.fill" catalog="system" id="DCu-BJ-fuB">
+                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="favButtonTapped:" destination="D0N-l2-Ivx" id="x5Y-9w-0da"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -460,8 +463,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart.fill" catalog="system" width="64" height="54"/>
         <image name="person" width="512" height="512"/>
-        <image name="suit.heart.fill" catalog="system" width="64" height="54"/>
         <image name="time" width="512" height="512"/>
     </resources>
 </document>
